<resources>
    <string name="app_name">TextbookHub</string>
    <string name="accessToken">pk.eyJ1IjoieHVlZmVpMSIsImEiOiJjaW1sbmo3OHQwN2d1dTRtNm84bmVsaW0zIn0.0NX2qut-ZonP8Xj9Kl2mqQ</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_">Username:</string>
    <string name="password_">Password:</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="owner">Owner</string>
    <string name="owner__">Owner:</string>
    <string name="owner_">Owner: (click to view profile)</string>
    <string name="comments_">Comments:</string>
    <string name="status_">Status:</string>
    <string name="book_name_">Book Name:</string>
    <string name="book_cat_">Book Category:</string>
    <string name="book_edition_">Book Edition:</string>
    <string name="book_start_bid_">Starting Bid($):</string>
    <string name="yes_en">Yes</string>
    <string name="no_en">No</string>
    <string name="ok_en">Ok</string>
    <string name="cancel_en">Cancel</string>
    <string name="save_en">Save</string>
    <string name="post_en">Post</string>
    <string name="edit_en">Edit</string>
    <string name="finish_en">Finish</string>
    <string name="current_highest_">Current Highest Bid:</string>
    <string name="current_bid_">Current Highest Bid: (click to view detail)</string>
    <string name="bid_history_">Bid History:</string>
    <string name="place_bid">Place Bid</string>
    <string name="accept_bid">Accept Bid</string>
    <string name="decline_bid">Decline Bid</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_picture">Delete Picture</string>
    <string name="activity_title_around_me">Books Around Me</string>

    <string name="username_hint">Please enter a unique username</string>
    <string name="password_hint">Type in your password</string>
    <string name="book_name_hint">(required)</string>
    <string name="comments_hint">Anything worth mentioning?</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>

    <string name="userprofile">User Profile</string>
    <string name="my_bids">My Bids</string>
    <string name="my_borrows">My Borrows</string>
    <string name="my_inventory">My Inventory</string>

    <string name="nothing_here">There is nothing here!</string>
    <string name="no_result_found">No result(s) found</string>
    <string name="no_bids">See a book you want? Bid fearlessly!</string>
    <string name="no_borrowed_book">Want to borrow a book? Search for it!</string>
    <string name="no_inventory_book">Have a book to lend? Click New!</string>
    <string name="nothing_around">Within 10km, there is nothing :P</string>
    <string name="new_book">+ New</string>

    <string name="discard_changes">Discard Changes</string>
    <string name="unsaved_warning">All unsaved changes will be lost, continue?</string>
    <string name="title_logout">Logout</string>
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="new_search">Search for a particular book here!</string>
    <string name="activity_title_my_bids">Book(s) I Bid On</string>
    <string name="activity_title_my_books">My Books</string>
    <string name="activity_title_my_borrows">Book(s) I Borrowed</string>
    <string name="take_pictures">+ Picture</string>
    <string name="distance_">Distance:</string>
    <string name="around_me_en">Near Me</string>

    <string name="error">Error</string>
    <string name="invalid_bid_entered">Invalid bid entered, please enter a bid higher than the current bid</string>
    <string name="invalid_book_name">Invalid Book Name Entered.</string>
    <string name="auth_failure">Wrong Username or Password</string>
    <string name="username_exists">Username Already Exists</string>
    <string name="user_profile_empty">Username or Password or Email cannot be Empty</string>
    <string name="invalid_user_profile">Password or Email Invalid</string>

    <string name="offline_title">Offline Mode</string>
    <string name="offline_content">No internet connection found, only limited features will be available</string>
    <string name="offline_not_available">This feature cannot be used in offline mode</string>
    <string name="offline_new_book">New book(s) will be uploaded to the server later when there is a connection</string>
    <string name="offline_new_profile">Changes will be uploaded to the server later when there is a connection</string>
    <string name="offline_no_server">Cannot connect to server</string>
    <string name="offline_no_conn">No internet connection found</string>
    <string name="book_status_">Book Status:</string>
    <string name="member_since_">Member Since:</string>
    <string name="amount_">Amount:</string>
    <string name="bid_placed_by_">Placed by:</string>
    <string name="date_placed_">Date Placed:</string>
    <string name="title_owner_info">Owner Info</string>
    <string name="title_bid_info">Bid Info</string>
    <string name="return_book">Return Book</string>
    <string name="location">Trade Location</string>
    <string name="search_en">Search</string>
    <string name="error_own_bid">You cannot accept your own bid!</string>
    <string name="oops">OOPS!</string>
    <string name="profile_cap">USER INFO</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="delete_confirm">Are you sure?</string>
    <string name="edit_warning">Edit this textbook will remove all the current bids, proceed?</string>
    <string name="actions_title">Actions</string>
    <string name="actions_picture">What do you want to do with this picture?</string>
    <string name="wait_update">Book is being updated, please wait for update to finish</string>
    <string name="hint_search_address">Enter address here</string>
    <string name="invalid_address">Address Invalid</string>
    <string name="set_location">Set Trade Location</string>
    <string name="default_location_used">No internet connection, default location will be used</string>
    <string-array name="category_array">
        <item>English</item>
        <item>Business</item>
        <item>Engineering</item>
        <item>Science</item>
        <item>Calculus</item>
        <item>Linear Algebra</item>
        <item>Economy</item>
        <item>Sociology</item>
        <item>Geology</item>
    </string-array>

    <string-array name="inventory_list_content_array">
        <item>Show All Books</item>
        <item>Show Pending Books</item>
        <item>Show Borrowed Books</item>
    </string-array>

</resources>
