<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/outer_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" >

        <LinearLayout
            android:id="@+id/section0_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_line_spacing_medium"
            android:paddingTop="@dimen/padding_line_spacing_medium" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:text="@string/profile_cap"
                android:textColor="@color/mat_grey_dark"
                android:textSize="@dimen/textsize_large"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/padding_title"
                android:layout_marginRight="@dimen/padding_title"
                android:layout_marginBottom="@dimen/padding_line_spacing_large"
                android:background="@color/mat_grey_light"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:text="@string/username_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:hint="@string/username_hint"
                android:maxLength="20"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/password_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:hint="@string/password_hint"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/email_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>