<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/search_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mat_indigo_normal"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:singleLine="true"
            android:textColor="@color/pure_white"
            android:id="@+id/et_address"
            android:hint="@string/hint_search_address"
            android:textColorHint="@color/pure_white"
            />

        <Button
            android:id="@+id/button_search_address"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="@drawable/button_indigo"
            android:drawablePadding="0dp"
            android:textColor="@color/pure_white"
            android:text="@string/search_en"
            android:textSize="@dimen/textsize_content" />

    </LinearLayout>

    <!-- Set the starting camera position and map style using xml-->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:access_token="@string/accessToken"
        mapbox:style_url="@string/style_mapbox_streets"
        mapbox:center_latitude="53.631611"
        mapbox:center_longitude="-113.323975"
        android:layout_above="@id/search_address_layout"
        mapbox:zoom="12"/>


</RelativeLayout>