<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollview_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent" >

        <LinearLayout
            android:id="@+id/section0_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:animateLayoutChanges="true"
            android:background="@color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_line_spacing_medium"
            android:paddingTop="@dimen/padding_line_spacing_medium" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_import_borrows_black_24dp"
                android:adjustViewBounds="true"
                android:layout_margin="100dp"/>

            <Button
                android:id="@+id/button_take_pic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:layout_marginTop="@dimen/padding_line_spacing_small"
                android:layout_marginBottom="@dimen/padding_line_spacing_small"
                android:text="@string/take_pictures"
                android:textAllCaps="false"
                android:background="@drawable/button_indigo"
                android:textColor="@color/pure_white"
                android:textSize="@dimen/textsize_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_large"
                android:text="@string/book_name_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:hint="@string/book_name_hint"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/book_start_bid_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_starting_bid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:inputType="numberDecimal"
                android:text="0.0"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/book_cat_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/book_edition_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_edition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingEnd="@dimen/padding_title"
                android:paddingLeft="@dimen/padding_title"
                android:paddingRight="@dimen/padding_title"
                android:paddingStart="@dimen/padding_title"
                android:paddingTop="@dimen/padding_line_spacing_medium"
                android:text="@string/comments_"
                android:textColor="@color/mat_grey_superdark"
                android:textSize="@dimen/textsize_large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_element"
                android:layout_marginRight="@dimen/padding_element"
                android:textColor="@color/mat_grey_superdark"
                android:singleLine="false"
                android:hint="@string/comments_hint"
                android:textSize="@dimen/textsize_large" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>